# window_scanner

./: CMakeLists.txt  deck.h  main.cpp
BMPGenerator/: BmpAdaptor.cpp  BmpAdaptor.h  CMakeLists.txt  FindWindow.cpp  FindWinwow.cpp  config.cpp  config.h  config.txt  main.cpp  window2bmp.cpp  window2bmp.h
Logic/: CMakeLists.txt
Logic/FixedLimit/: CMakeLists.txt  preflop.cpp  preflop.h
Scanner/: CMakeLists.txt  autotrans.cpp  color.cpp  color.h  image.cpp  image.h  pattern.h  pattern.tcc  pattern.tpl  storage.cpp  storage.h  temp.cpp  test.cpp
Utils/: CMakeLists.txt  sleeper.cpp  sleeper.h
